# faderpunk

./: .gitignore  .release-please-manifest.beta.json  .release-please-manifest.json  devenv.nix  devenv.yaml  release-please-config.beta.json
.github/workflows/: beta.yml  ci.yml  release-beta.yml  release.yml
configurator/: .changelog-beta-configurator.md  CHANGELOG.md  package.json  pnpm-lock.yaml  shell.nix  vite.config.mjs
configurator/src/: App.tsx  consts.ts  main.tsx  useLatestFirmwareVersion.ts  vite-env.d.ts
configurator/src/components/: ActiveApp.tsx  EditLayoutModal.tsx  Item.tsx  ManualTab.tsx  SettingsTab.tsx  SortableItem.tsx
configurator/src/components/input/: AppParam.tsx  ParamMidiCc.tsx  ParamMidiNrpn.tsx
configurator/src/components/manual/: Configurator.tsx  Interface.tsx  Md.tsx  Troubleshooting.tsx  UpdateGuide.tsx
configurator/src/components/settings/: AuxSettings.tsx  ClockSettings.tsx  ControlledFields.tsx  I2cSettings.tsx  MidiSettings.tsx  MiscSettings.tsx  QuantizerSettings.tsx
configurator/src/hooks/: useConnectionHealthCheck.ts
configurator/src/landing/: App.tsx
configurator/src/utils/: utils.ts  validators.ts
faderpunk/: .changelog-beta-faderpunk.md  CHANGELOG.md  Cargo.toml  clippy.toml
faderpunk/src/: app.rs  events.rs  main.rs  state.rs  storage.rs
faderpunk/src/apps/: ad.rs  adder.rs  clk_div.rs  clk_div_plus.rs  clkturing.rs  control.rs  cv2midi.rs  cv2midinote.rs  cvcombine.rs  euclid.rs  follower.rs  fp_grids.rs  gatecombine.rs  lfo.rs  lfo_plus.rs  midi2cv.rs  mod.rs  my_app.rs  notefader.rs  offset_att.rs  panner.rs  probatrigger.rs  quantizer.rs  rnd.rs  rnd_plus.rs  rndcvcc.rs  seq8.rs  slew.rs  soma.rs  turing.rs
faderpunk/src/tasks/: buttons.rs  calibration.rs  clock.rs  configure.rs  global_config.rs  i2c.rs  input_handlers.rs  leds.rs  max.rs  midi.rs  mod.rs  web_usb.rs
libfp/: CHANGELOG.md  Cargo.toml
libfp/src/: ext.rs  i2c_proto.rs  latch.rs  lib.rs  quantizer.rs  soma_lib.rs  utils.rs
libfp/src/fp_grids/: fp_grids_resources.rs  mod.rs
libfp/src/fp_grids_lib/: mod.rs  pattern_generator.rs  resources.rs  utils.rs
