[package]
name = "faderpunk"
version = "1.6.0-beta.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
embedded-io-async = "0.6.1"
embassy-embedded-hal = { version = "0.3.2", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-262144",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.5.0", features = [
  "defmt",
  "max-interface-count-5",
] }
embassy-rp = { version = "0.6.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xb",
  "binary-info",
] }
embassy-futures = { version = "0.1.0" }

cobs = { version = "0.4.0", default-features = false }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
fm24v10 = "0.1.1"
# NOTE: Older version needed by postcard
heapless = "0.7.17"
libm = "0.2.15"
linreg = { git = "https://github.com/ATOVproject/linreg-rs" }
log = "0.4.28"
max11300 = "0.5.1"
midly = { version = "0.5.3", default-features = false }
mii = "0.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
pio = "0.3.0"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
postcard = "1.1.3"
serde = { version = "1.0.219", features = ["derive"], default-features = false }
smart-leds = "0.4.0"
static_cell = "2.1.1"
ws2812-async = "0.3.0"

libfp = { path = "../libfp" }

[lints.clippy]
large_futures = "warn"

[lints.rust]
unused_must_use = "deny"
