[package]
name = "libfp"
description = "Faderpunk shared libraries"
version = "0.10.1-beta.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
embassy-time = "0.4.0"
heapless = "0.7.17"
libm = "0.2.15"
max11300 = "0.5.1"
midly = { version = "0.5.3", default-features = false }
postcard = "1.1.3"
postcard-bindgen = "0.7.1"
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_arrays = "0.2.0"
smart-leds = "0.4.0"
